--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <i class="fas fa-bars"></i>
         </div>
         <div class="logo">
-          <a href="/">
+          <a href="#">
             <img src="./assets/Koperasi Nuris.png" alt="Koperasi Nuris" />
           </a>
         </div>
