size dan jam kerja

--- a/index.html
+++ b/index.html
@@ -310,8 +310,7 @@
         <div class="right">
           <h3>Working Hours</h3>
           <div class="work-hours">
-            <p><span>Mon - Fri</span><span>7.00 AM - 4.00 PM</span></p>
-            <p><span>Sat - Sun</span><span>12.00 AM - 4.00 PM</span></p>
+            <p><span>setiap hari</span><span>7.00 AM - 4.00 PM</span></p>
           </div>
         </div>
       </div>
