--- a/menu.html
+++ b/menu.html
@@ -89,6 +89,10 @@
                 <h3>Chacha</h3>
                 <p class="category">Makanan</p>
                 <div class="price">Rp 5.00</div>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
+                <div class="price">Rp 1.000</div>
               </div>
             </div>
 
@@ -110,9 +114,6 @@
                 </div>
                 <h3>Buku Sidu</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice">
-                  <div class="size"></div>
-                </div>
                 <div class="price">Rp 3.000</div>
               </div>
             </div>
@@ -173,8 +174,7 @@
                 </div>
                 <h3>Good Day</h3>
                 <p class="category">Minuman</p>
-                <div class="product-choice"></div>
-                <div class="price">Rp 7.500</div>
+                <div class="price">Rp 7.000</div>
               </div>
             </div>
 
@@ -183,9 +183,8 @@
                 <div class="img">
                   <img src="./assets/product-img/new/indomie kaldu.png" />
                 </div>
-                <h3>Indomie Kaldu</h3>
+                <h3>Indomie Kaldu ayam</h3>
                 <p class="category">Makanan</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 3.500</div>
               </div>
             </div>
@@ -197,7 +196,6 @@
                 </div>
                 <h3>Lem</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 3.000</div>
               </div>
             </div>
@@ -209,7 +207,6 @@
                 </div>
                 <h3>Mie Sedap</h3>
                 <p class="category">Makanan</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 3.500</div>
               </div>
             </div>
@@ -222,7 +219,7 @@
                 <h3>Nivea</h3>
                 <p class="category">Kebutuhan Santri</p>
                 <div class="product-choice"></div>
-                <div class="price">Rp 10.000</div>
+                <div class="price">Rp 20.000</div>
               </div>
             </div>
 
@@ -234,7 +231,7 @@
                 <h3>Nyam Nyam</h3>
                 <p class="category">Makanan</p>
                 <div class="product-choice"></div>
-                <div class="price">Rp 2.000</div>
+                <div class="price">Rp 5.000</div>
               </div>
             </div>
 
@@ -245,7 +242,6 @@
                 </div>
                 <h3>Penghapus Joyko</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 2.500</div>
               </div>
             </div>
@@ -257,7 +253,6 @@
                 </div>
                 <h3>Pensi 2B</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 2.000</div>
               </div>
             </div>
@@ -269,7 +264,6 @@
                 </div>
                 <h3>Pulpen AE7</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 2.500</div>
               </div>
             </div>
@@ -281,7 +275,6 @@
                 </div>
                 <h3>Pulpen</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 5.000</div>
               </div>
             </div>
@@ -335,7 +328,6 @@
                 </div>
                 <h3>Spidol Warna</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 20.000</div>
               </div>
             </div>
@@ -350,7 +342,7 @@
                 <div class="product-choice">
                   <div class="size"></div>
                 </div>
-                <div class="price">Rp 5.000</div>
+                <div class="price">Rp 6.000</div>
               </div>
             </div>
 
@@ -373,9 +365,6 @@
                 </div>
                 <h3>Buku Vision</h3>
                 <p class="category">ATK</p>
-                <div class="product-choice">
-                  <div class="size"></div>
-                </div>
                 <div class="price">Rp 2.500</div>
               </div>
             </div>
@@ -387,7 +376,6 @@
                 </div>
                 <h3>komix</h3>
                 <p class="category">Kebutuhan Santri</p>
-                <div class="product-choice"></div>
                 <div class="price">Rp 1.500</div>
               </div>
             </div>
@@ -402,7 +390,7 @@
                 <div class="product-choice">
                   <div class="size"></div>
                 </div>
-                <div class="price">Rp 3.000</div>
+                <div class="price">Rp 10.000</div>
               </div>
             </div>
 
@@ -435,7 +423,10 @@
                 </div>
                 <h3>Saos</h3>
                 <p class="category">Makanan</p>
-                <div class="price">Rp 3.000</div>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
+                <div class="price">Rp 15.000</div>
               </div>
             </div>
 
@@ -457,7 +448,7 @@
                 </div>
                 <h3>Spidol</h3>
                 <p class="category">ATK</p>
-                <div class="price">Rp 7.000</div>
+                <div class="price">Rp 17.000</div>
               </div>
             </div>
 
@@ -468,6 +459,9 @@
                 </div>
                 <h3>Sunlight</h3>
                 <p class="category">Kebutuhan Santri</p>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
                 <div class="price">Rp 3.000</div>
               </div>
             </div>
@@ -479,6 +473,9 @@
                 </div>
                 <h3>Taro</h3>
                 <p class="category">Makanan</p>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
                 <div class="price">Rp 7.000</div>
               </div>
             </div>
@@ -490,6 +487,9 @@
                 </div>
                 <h3>Teh Pucuk</h3>
                 <p class="category">Minuman</p>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
                 <div class="price">Rp 3.000</div>
               </div>
             </div>
@@ -501,7 +501,7 @@
                 </div>
                 <h3>Thai Tea</h3>
                 <p class="category">Minuman</p>
-                <div class="price">Rp 3.000</div>
+                <div class="price">Rp 10.000</div>
               </div>
             </div>
 
@@ -512,6 +512,9 @@
                 </div>
                 <h3>Tipe-X</h3>
                 <p class="category">ATK</p>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
                 <div class="price">Rp 5.000</div>
               </div>
             </div>
@@ -523,7 +526,10 @@
                 </div>
                 <h3>Tisu</h3>
                 <p class="category">Kebutuhan Santri</p>
-                <div class="price">Rp 15.000</div>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
+                <div class="price">Rp 6.000</div>
               </div>
             </div>
 
@@ -534,6 +540,9 @@
                 </div>
                 <h3>Ultramilk Coklat</h3>
                 <p class="category">Minuman</p>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
                 <div class="price">Rp 6.000</div>
               </div>
             </div>
@@ -545,6 +554,9 @@
                 </div>
                 <h3>Ultramilk</h3>
                 <p class="category">Minuman</p>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
                 <div class="price">Rp 6.000</div>
               </div>
             </div>
@@ -556,7 +568,10 @@
                 </div>
                 <h3>wipol</h3>
                 <p class="category">Kebutuhan Santri</p>
-                <div class="price">Rp 5.000</div>
+                <div class="product-choice">
+                  <div class="size"></div>
+                </div>
+                <div class="price">Rp 15.000</div>
               </div>
             </div>
 
@@ -567,7 +582,7 @@
                 </div>
                 <h3>Yupi</h3>
                 <p class="category">Makanan</p>
-                <div class="price">Rp 1.000</div>
+                <div class="price">Rp 500</div>
               </div>
             </div>
 
@@ -578,7 +593,7 @@
                 </div>
                 <h3>Diatabs</h3>
                 <p class="category">Kebutuhan Santri</p>
-                <div class="price">Rp 2.000</div>
+                <div class="price">Rp 5.000</div>
               </div>
             </div>
 
@@ -589,7 +604,7 @@
                 </div>
                 <h3>Gayung</h3>
                 <p class="category">Alat Mandi</p>
-                <div class="price">Rp 3.500</div>
+                <div class="price">Rp 10.000</div>
               </div>
             </div>
 
@@ -622,7 +637,7 @@
                 </div>
                 <h3>Kahf</h3>
                 <p class="category">Alat Mandi</p>
-                <div class="price">Rp 21.000</div>
+                <div class="price">Rp 26.000</div>
               </div>
             </div>
 
@@ -633,7 +648,7 @@
                 </div>
                 <h3>Kunci Lemari</h3>
                 <p class="category">Kebutuhan Santri</p>
-                <div class="price">Rp 8.000</div>
+                <div class="price">Rp 20.000</div>
               </div>
             </div>
           </div>
@@ -769,8 +784,7 @@
         <div class="right">
           <h3>Working Hours</h3>
           <div class="work-hours">
-            <p><span>Mon - Fri</span><span>7.00 AM - 4.00 PM</span></p>
-            <p><span>Sat - Sun</span><span>12.00 AM - 4.00 PM</span></p>
+            <p><span>setiap hari</span><span>7.00 AM - 4.00 PM</span></p>
           </div>
         </div>
       </div>
