perbaikan dan tambahan

--- a/index.html
+++ b/index.html
@@ -147,20 +147,24 @@
         <div class="slider">
           <div class="slider-container">
             <div class="testimonial">
-              <p>‟Absolutely love this place! The coffee is rich and flavorful, and the cozy atmosphere is perfect for unwinding. Friendly staff too - highly recommended!”</p>
-              <h3>Ozik Jarwo</h3>
+              <p>‟Tabrak semua perihal yang tidak mungkin, tidak ada hal yang tidak mungkin.”</p>
+              <h3>Dimas</h3>
             </div>
             <div class="testimonial">
-              <p>‟This café has become my go-to spot. Expertly crafted drinks and an inviting ambiance make it a delightful experience every time.”</p>
-              <h3>Abi Qhafari</h3>
+              <p>‟Future depends on what you to do today.”</p>
+              <h3>Gilang</h3>
             </div>
             <div class="testimonial">
-              <p>‟As a coffee connoisseur, I'm thrilled with the outstanding selection of premium blends here. The cozy setting and welcoming staff keep me coming back.”</p>
-              <h3>Muhammad Hamdani</h3>
+              <p>‟Hidup bukan tentang bertahan dari badai, ini tentang belajar bagaimana menari di tengah hujan.”</p>
+              <h3>Alsitya</h3>
             </div>
             <div class="testimonial">
-              <p>‟Stepping into this café is like finding an oasis of calm. The exceptional coffee and inviting vibe make it the perfect spot to unwind.”</p>
-              <h3>MD. Adhyaksa</h3>
+              <p>‟Motivasi tanpa aksi adalah halusinasi.”</p>
+              <h3>Cindy</h3>
+            </div>
+            <div class="testimonial">
+              <p>‟Wasting time hanyalah membuang waktu.”</p>
+              <h3>Aura</h3>
             </div>
           </div>
         </div>
