diklik logo sudah bisa

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <i class="fas fa-bars"></i>
         </div>
         <div class="logo">
-          <a href="#">
-            <img src="./assets/Koperasi Nuris.png" alt="Koperasi Nuris" />
+          <a href="index.html">
+            <img src="./assets/KoperasiNuris.png" alt="KoperasiNuris" />
           </a>
         </div>
         <nav>
