--- a/about-us.html
+++ b/about-us.html
@@ -20,8 +20,8 @@
           <i class="fas fa-bars"></i>
         </div>
         <div class="logo">
-          <a href="/">
-            <img src="./assets/Koperasi Nuris.png" alt="Tani Kopi" />
+          <a href="index.html">
+            <img src="./assets/KoperasiNuris.png" alt="KoperasiNursi" />
           </a>
         </div>
         <nav>
