--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <img src="./assets/tabungan.png" />
             </div>
             <h3>Tabungan Santri</h3>
-            <p>Step into our cozy café and enjoy your drinks in comfort. Our location and hours make it easy to visit.</p>
+            <p>Membina kebiasaan menabung sejak dini, membentuk karakter hemat dan mandiri demi masa depan yang lebih baik.</p>
           </div>
         </div>
         <div class="mid">
@@ -96,14 +96,14 @@
               <img src="./assets/titip dagang.png" />
             </div>
             <h3>Menerima Titip Dagang</h3>
-            <p>Our skilled baristas are masters of their craft, meticulously preparing each cup with precision and awesome expertise.</p>
+            <p>Dukung ekonomi dengan menitipkan dagangan Anda di koperasi kami. InsyaAllah jual beli yang jujur, amanah, dan penuh keberkahan.</p>
           </div>
           <div class="item-text">
             <div class="icon">
               <img src="./assets/terjangkau.png" />
             </div>
             <h3>Harga Terjangkau</h3>
-            <p>Enjoy high-quality products and service at prices that fit your budget. We provide exceptional value, fantastic choice.</p>
+            <p>Dapatkan produk terbaik tanpa harus merogoh kocek dalam-dalam! Harga bersahabat, kualitas tetap nomor satu!</p>
           </div>
         </div>
       </div>
