tambahan dari cindy

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <section id="cup">
-      <h2 class="sec-title">Apa Yang Kita Jual</h2>
+      <h2 class="sec-title">Apa Yang Kita Sediakan</h2>
       <div class="wrap">
         <div class="left">
           <div class="item-text">
