nambahin logo di title

--- a/about-us.html
+++ b/about-us.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Koperasi Nuri</title>
-
     <link rel="stylesheet" href="./src/css/about-us.css" />
-
+    <link rel="icon" href="./assets/LOGO NURIS (1).png" type="image/png" />
     <link media="all" rel="stylesheet" href="./src/css/all.css" />
     <link media="all" rel="stylesheet" href="./src/css/fontawesome.css" />
-
     <script src="./src/js/all.js"></script>
   </head>
 
