--- a/contact-us.html
+++ b/contact-us.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link media="all" rel="stylesheet" href="./src/css/all.css" />
     <link media="all" rel="stylesheet" href="./src/css/fontawesome.css" />
-
     <link media="all" rel="stylesheet" href="./src/css/contact-us.css" />
+    <link rel="icon" href="./assets/LOGO NURIS (1).png" type="image/png" />
 
     <script src="./src/js/all.js"></script>
   </head>
