--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link media="all" rel="stylesheet" href="./src/css/all.css" />
     <link media="all" rel="stylesheet" href="./src/css/fontawesome.css" />
-
+    <link rel="icon" href="./assets/LOGO NURIS (1).png" type="image/png" />
     <link media="all" rel="stylesheet" href="./src/css/menu.css" />
     <link media="all" rel="stylesheet" href="./src/css/product.css" />
   </head>
