--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <title>Koperasi Nuris</title>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link media="all" rel="stylesheet" href="./src/css/all.css" />
-    <link media="all" rel="stylesheet" href="./src/css/fontawesome.css" />
+    <!-- Favicon -->
+    <link rel="icon" href="./assets/LOGO NURIS (1).png" type="image/png" />
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="./src/css/all.css" />
+    <link rel="stylesheet" href="./src/css/fontawesome.css" />
     <link href="https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@400;700&display=swap" rel="stylesheet" />
-
-    <link media="all" rel="stylesheet" href="./src/css/index.css" />
-    <link media="all" rel="stylesheet" href="./src/css/product.css" />
+    <link rel="stylesheet" href="./src/css/index.css" />
+    <link rel="stylesheet" href="./src/css/product.css" />
   </head>
 
   <body>
